--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@
 }
 
 .Header {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 40vmax;
     font-size: 1.5rem;
     margin: 1vmax;
@@ -53,7 +53,7 @@
 }
 
 .Footer {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 40vmax;
     font-size: 2rem;
     margin: 1vmax;
